--- a/news.html
+++ b/news.html
@@ -23,9 +23,9 @@
 
   <p class="indent">
     <div class="date">Nov, 2016</div>
-    I serve on the poster program committee of <a href="http://www.codaspy.org/">CODASPY 2017</a><br>
-    I serve on the program committee of <a href="http://ifipsec.org/2016/">IFIP SEC 2017</a><br>
-    I serve as a reviewer for <a href="http://tops.acm.org/">ACM TOPS</a>
+    I'm serving on the poster program committee of <a href="http://www.codaspy.org/">CODASPY 2017</a><br>
+    I'm serving on the program committee of <a href="http://ifipsec.org/2016/">IFIP SEC 2017</a><br>
+    I'm reviewing for <a href="http://tops.acm.org/">ACM TOPS</a>
   </p>
 
   <p class="indent" style="margin-top:6px;">
@@ -41,12 +41,12 @@
 
   <p class="indent" style="margin-top:6px;">
     <div class="date">June, 2016</div>
-    I serve on the program committee of <a href="http://wpes2016.di.unimi.it/">WPES 2016</a>
+    I'm serving on the program committee of <a href="http://wpes2016.di.unimi.it/">WPES 2016</a>
   </p>
 
   <p class="indent" style="margin-top:6px;">
     <div class="date">Jan, 2016</div>
-    I serve as the publicity chair of <a href="http://www.raid2016.org/">RAID 2016</a>
+    I'm serving as the publicity chair of <a href="http://www.raid2016.org/">RAID 2016</a>
   </p>
 
 </body>
