Fixes typos, adds new news events

--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
   </h2>
 
   <p class="indent">
+    <div class="underlined">Dec, 2016</div>
+    I'm visiting <a href="http://www.ece.ubc.ca/">UBC</a>. See you in Vancouver!
+  </p>
+
+  <p class="indent">
     <div class="underlined">Nov, 2016</div>
+    I'm visting <a href="http://security.engin.umich.edu/">UMich</a>. See you in Ann Arbor!<br>
     I'm serving on the poster program committee of <a href="http://www.codaspy.org/">CODASPY 2017</a><br>
     I'm serving on the program committee of <a href="http://ifipsec.org/2016/">IFIP SEC 2017</a><br>
     I'm reviewing for <a href="http://tops.acm.org/">ACM TOPS</a>
@@ -177,7 +183,7 @@
   </td></tr></table>
   </td></tr></table>
 
-  <div class="footer">&copy; Copyright 2016 - Yazan Boshmaf. HTML/CSS inspired by <a href="https://jhalderm.com/">J. Alex Halderman</a>.</div>
+  <div class="footer">&copy; Copyright 2016 - Yazan Boshmaf. Modified HTML/CSS/JS used from <a href="https://jhalderm.com/">J. Alex Halderman</a>.</div>
 
   <script type="text/javascript">
       function setText(id, t) {
@@ -196,12 +202,12 @@
         el.setAttribute('href', 'mailto:'+email);
       }
 
-      function showphone(node, a,b,c) {
-        setText(node, '+1 '+a+'-'+b+'-'+c);
+      function showphone(node, a,b) {
+        setText(node, '+974 '+a+'-'+b);
       }
 
       showemail('hbku.edu.qa','yboshmaf');
-      showphone('phone', '974','445','41552');
+      showphone('phone','445','41552');
 
   </script>
 </body>
