--- a/news.html
+++ b/news.html
@@ -22,7 +22,13 @@
     <div class=spacer></div>
 
   <p class="indent">
+    <div class="underlined">Dec, 2016</div>
+    I'm visiting <a href="http://www.ece.ubc.ca/">UBC</a>. See you in Vancouver!
+  </p>
+
+  <p class="indent">
     <div class="date">Nov, 2016</div>
+    I'm visting <a href="http://security.engin.umich.edu/">UMich</a>. See you in Ann Arbor!<br>
     I'm serving on the poster program committee of <a href="http://www.codaspy.org/">CODASPY 2017</a><br>
     I'm serving on the program committee of <a href="http://ifipsec.org/2016/">IFIP SEC 2017</a><br>
     I'm reviewing for <a href="http://tops.acm.org/">ACM TOPS</a>
