--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
     <div class=spacer></div>
 
   <p class="indent">
-    <div class="underlined">Dec, 2016</div>
+    <div class="date">Dec, 2016</div>
     I'm visiting <a href="http://www.ece.ubc.ca/">UBC</a>. See you in Vancouver!
   </p>
 
