--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
 
   <p class="indent">
     <div class="date">Dec, 2016</div>
+    I'm reviewing for <a href="https://www.computer.org/web/tdsc">IEEE TDSC</a><br>
     I'm visiting <a href="http://www.ece.ubc.ca/">UBC</a>. See you in Vancouver!
   </p>
 
