--- a/index.html
+++ b/index.html
@@ -162,6 +162,16 @@
   </p>
 
   <p>
+    <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/286/files/ASONAM_2013.pdf">Graph-based Sybil Detection in Social and Information Systems</a></span></div>
+    <small>
+    Yazan Boshmaf, Konstantin Beznosov, and Matei Ripeanu
+    </div>
+  <div class=ref><i>Proc. of 2013 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining</i><br>
+    ASONAM &rsquo;13, Niagara Falls, Canada, August 2013 &mdash; <b>best paper award</b></div>
+  </small>
+  </p>
+
+  <p>
     <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/275/files/275.pdf">Key Challenges in Defending against Malicious Socialbots</a></span></div>
     <small>
     Yazan Boshmaf, Ildar Muslukhov, Konstantin Beznosov, Matei Ripeanu
