--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <h2>
     <span class="morelinks">
-      <a href="https://scholar.google.com/citations?user=oDTfXXYAAAAJ&hl=en" target="_blank">&raquo;&nbsp;all</a>
+      <a href="pubs.html" target="_blank">&raquo;&nbsp;all</a>
     </span>
     Selected publications
   </h2>
@@ -145,7 +145,6 @@
     <div class="title"><span class="pdf"><a class=title href="https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/43862.pdf">Thwarting Fake OSN Accounts by Predicting their Victims</a></span></div>
     <small>
     Yazan Boshmaf, Matei Ripeanu, Konstantin Beznosov, and Elizeu Santos-Neto
-    </div>
   <div class=ref><i>Proc. 8th ACM Workshop on Artificial Intelligence and Security</i><br>
     AI-Sec &rsquo;15, Denver, CO, Oct 2015</div>
   </small>
@@ -155,7 +154,6 @@
     <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/296/files/NDSS_260_Final.pdf">Leveraging Victim Prediction for Robust Fake Account Detection in OSNs</a></span></div>
     <small>
     Yazan Boshmaf, Dionysios Logothetis, Georgos Siganos, Jorge Lería, Jose Lorenzo, Matei Ripeanu, and Konstantin Beznosov
-    </div>
   <div class=ref><i>Proc. of 2015 Network and Distributed System Security Symposium</i><br>
     NDSS &rsquo;15, San Diego, CA, Feb 2015</div>
   </small>
@@ -165,9 +163,8 @@
     <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/286/files/ASONAM_2013.pdf">Graph-based Sybil Detection in Social and Information Systems</a></span></div>
     <small>
     Yazan Boshmaf, Konstantin Beznosov, and Matei Ripeanu
-    </div>
   <div class=ref><i>Proc. of 2013 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining</i><br>
-    ASONAM &rsquo;13, Niagara Falls, Canada, August 2013 &mdash; <b>best paper award</b></div>
+    ASONAM &rsquo;13, Niagara Falls, Canada, Aug 2013 &mdash; <b>best paper award</b></div>
   </small>
   </p>
 
@@ -176,7 +173,7 @@
     <small>
     Yazan Boshmaf, Ildar Muslukhov, Konstantin Beznosov, Matei Ripeanu
   <div class=ref><i>Proc. of 5th USENIX Workshop on Large-Scale Exploits and Emergent Threats</i><br>
-    LEET &rsquo;12, San Jose, CA, April 2012</div>
+    LEET &rsquo;12, San Jose, CA, Apr 2012</div>
   </small>
   </p>
 
@@ -184,7 +181,6 @@
     <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/264/files/264.pdf">The Socialbot Network: When Bots Socialize for Fame and Money</a></span></div>
     <small>
     Yazan Boshmaf, Ildar Muslukhov, Konstantin Beznosov, and Matei Ripeanu
-    </div>
   <div class=ref><i>Proc. of 27th Annual Computer Security Applications Conference</i><br>
     ACSAC &rsquo;11, Orlando, FL, Dec 2011 &mdash; <b>outstanding paper award</b></div>
   </small>
