--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <h2>
     <span class="morelinks">
-      <a href="pubs.html" target="_blank">&raquo;&nbsp;all</a>
+      <a href="pubs.html">&raquo;&nbsp;all</a>
     </span>
     Selected publications
   </h2>
