Adds Google Scholar link

--- a/pubs.html
+++ b/pubs.html
@@ -17,7 +17,7 @@
 
   <div class="fore">
     <h1>Publications</h1>
-    <h2><a href="index.html">&laquo;&nbsp;Yazan Boshmaf</a></h2>
+    <h2><a href="index.html">&laquo;&nbsp;Yazan Boshmaf</a> | <a href="https://scholar.google.com/citations?user=oDTfXXYAAAAJ" target="_blank">Google Scholar</a></h2>
 
     <h3>2016</h3>
     <p>
@@ -30,7 +30,7 @@
     </p>
 
     <p>
-      <div class="title"><span class="pdf"><a class=title href="http://www.sciencedirect.com/science/article/pii/S1574119216300888">Decoupling Data-at-Rest Encryption and Smartphone Locking with Wearable Devices</a></span></div>
+      <div class="title"><span><a class=title href="http://www.sciencedirect.com/science/article/pii/S1574119216300888">Decoupling Data-at-Rest Encryption and Smartphone Locking with Wearable Devices</a></span></div>
       <small>
       Ildar Muslukhov, San-Tsai Sun, Primal Wijesekera, Yazan Boshmaf, and Konstantin Beznosov
     <div class=ref><i>Elsevier Pervasive and Mobile Computing</i><br>
@@ -118,7 +118,7 @@
       <small>
       Stephan Schuhmann, Klaus Herrmann, Kurt Rothermel, and Yazan Boshmaf
     <div class=ref><i>ACM Transactions on Autonomous and Adaptive Systems</i><br>
-      TAAS, Volume 8, Issue 2, Article No. 10, Jul 2013</div>
+      Volume 8, Issue 2, Article No. 10, Jul 2013</div>
     </small>
     </p>
 
