--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 
   <p>
     <div class="underlined">Cyber Security Intelligence</div>
-    I'm collaborating with <a href="http://qcri.com/">QCRI</a> CyberSec folks to build a real-time analytics platform for detecting and mitigating DRDoS attacks.
+    I'm collaborating with <a href="http://qcri.com/">QCRI</a> CyberSec folks to build a real-time processing platform for analyzing DRDoS attacks.
   </p>
 
   <p>
     <div class="underlined">Internet Security Posture Assessment</div>
-    I'm collaborating with <a href="https://zmap.io/">ZMap</a> and <a href="https://censys.io/">Censys</a> folks from <a href="http://security.engin.umich.edu/">UMich</a> to explore how one would asses the security posture of a country on the Internet.
+    I'm collaborating with <a href="https://zmap.io/">ZMap</a> and <a href="https://censys.io/">Censys</a> folks at <a href="http://security.engin.umich.edu/">UMich</a> to explore how one would asses the security posture of a country on the Internet.
   </p>
 
   <p>
