--- a/news.html
+++ b/news.html
@@ -17,44 +17,47 @@
 <body>
 
   <div class="fore">
+
     <h1>News</h1>
     <h2><a href="index.html">&laquo;&nbsp;Yazan Boshmaf</a></h2>
     <div class=spacer></div>
 
-  <p class="indent">
-    <div class="date">Dec, 2016</div>
-    I'm reviewing for <a href="https://www.computer.org/web/tdsc">IEEE TDSC</a><br>
-    I'm visiting <a href="http://www.ece.ubc.ca/">UBC</a>. See you in Vancouver!
-  </p>
+    <p class="indent">
+      <div class="date">Dec, 2016</div>
+      I'm reviewing for <a href="https://www.computer.org/web/tdsc">IEEE TDSC</a><br>
+      I'm visiting <a href="http://www.ece.ubc.ca/">UBC</a>. See you in Vancouver!
+    </p>
 
-  <p class="indent">
-    <div class="date">Nov, 2016</div>
-    I'm visting <a href="http://security.engin.umich.edu/">UMich</a>. See you in Ann Arbor!<br>
-    I'm serving on the poster program committee of <a href="http://www.codaspy.org/">CODASPY 2017</a><br>
-    I'm serving on the program committee of <a href="http://ifipsec.org/2017/">IFIP SEC 2017</a><br>
-    I'm reviewing for <a href="http://tops.acm.org/">ACM TOPS</a>
-  </p>
+    <p class="indent">
+      <div class="date">Nov, 2016</div>
+      I'm visting <a href="http://security.engin.umich.edu/">UMich</a>. See you in Ann Arbor!<br>
+      I'm serving on the poster program committee of <a href="http://www.codaspy.org/">CODASPY 2017</a><br>
+      I'm serving on the program committee of <a href="http://ifipsec.org/2017/">IFIP SEC 2017</a><br>
+      I'm reviewing for <a href="http://tops.acm.org/">ACM TOPS</a>
+    </p>
 
-  <p class="indent" style="margin-top:6px;">
-    <div class="date">Oct, 2016</div>
-    I'm attending <a href="https://www.sigsac.org/ccs/CCS2016/">CCS 2016</a>. See you in Vienna!
-  </p>
+    <p class="indent" style="margin-top:6px;">
+      <div class="date">Oct, 2016</div>
+      I'm attending <a href="https://www.sigsac.org/ccs/CCS2016/">CCS 2016</a>. See you in Vienna!
+    </p>
 
-  <p class="indent" style="margin-top:6px;">
-    <div class="date">Sept, 2016</div>
-    I'm visiting <a href="http://www.ece.ubc.ca/">UBC</a>. See you in Vancouver!<br>
-    I'm attending <a href="https://www.usenix.org/conference/usenixsecurity16">Usenix Sec 2016</a>. See you in Austin!
-  </p>
+    <p class="indent" style="margin-top:6px;">
+      <div class="date">Sept, 2016</div>
+      I'm visiting <a href="http://www.ece.ubc.ca/">UBC</a>. See you in Vancouver!<br>
+      I'm attending <a href="https://www.usenix.org/conference/usenixsecurity16">Usenix Sec 2016</a>. See you in Austin!
+    </p>
 
-  <p class="indent" style="margin-top:6px;">
-    <div class="date">June, 2016</div>
-    I'm serving on the program committee of <a href="http://wpes2016.di.unimi.it/">WPES 2016</a>
-  </p>
+    <p class="indent" style="margin-top:6px;">
+      <div class="date">June, 2016</div>
+      I'm serving on the program committee of <a href="http://wpes2016.di.unimi.it/">WPES 2016</a>
+    </p>
 
-  <p class="indent" style="margin-top:6px;">
-    <div class="date">Jan, 2016</div>
-    I'm serving as the publicity chair of <a href="http://www.raid2016.org/">RAID 2016</a>
-  </p>
+    <p class="indent" style="margin-top:6px;">
+      <div class="date">Jan, 2016</div>
+      I'm serving as the publicity chair of <a href="http://www.raid2016.org/">RAID 2016</a>
+    </p>
+
+  </div>
 
 </body>
 </html>
