Added students section to index

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     #contact td { text-align: left; vertical-align: top; margin: 0; padding-bottom: 9px; }
     #contact td.l { text-align: right; font-style: italic; padding-right: 12px; }
     .title { margin: 0 0 3px 0; }
+    .students { margin-top: 9px; padding: 18px 0 0 0; border-top: 1px solid #bbb; }
     .altlink { margin-left: 6px; font-size: 90%; }
     .rule { margin-top: 20px; padding-top: 14px; border-top: 1px solid #bbb; }
     .footer{ margin: 15px 0 0 0; display: table; text-align: center; margin-left: auto; margin-right: auto; }
@@ -68,6 +69,10 @@
       </td>
     </tr>
   </table>
+
+  <div class="students">
+    <span class="announcement info">If you are a student and interested in working with me, please click <a href="students.html">here!</a></span>
+  </div>
 
   </td><td class="column" id="right">
 
