--- a/students.html
+++ b/students.html
@@ -27,10 +27,10 @@
       <p>I have put together a bunch of useful content in this page that I found valuable when I was working towards my degrees. I would skim through this content <em>before</em> exploring current research, mentorship, and collaboration opportunities, which are equally important to me. Enjoy!</p>
 
       <div class="title">Life as a Graduate Student</div>
-      <p><em>Life as a graduate student can be tough: long hours, little money. Still, you can have an enjoyable and effective graduate study experience.</em></p>
+      <p><em>What I wish I knew when I started graduate school!</em></p>
       <ul>
         <li>
-          <a href="http://www.cs.unc.edu/~azuma/hitch4.html">So Long, and Thanks for the Ph.D!</a> Ronald Azuma's "what I wish I knew when I started graduate school."
+          <a href="http://www.cs.unc.edu/~azuma/hitch4.html">So Long, and Thanks for the Ph.D!</a> (Ronald Azuma).
         </li>
         <li>
           <a href="http://www.cs.indiana.edu/how.2b/how.2b.html">How to Be a Good Graduate Student/Advisor</a> (Marie desJardins).
