--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   </td></tr></table>
   </td></tr></table>
 
-  <div class="footer">&copy; Copyright 2016 - Yazan Boshmaf. Modified HTML/CSS/JS used from <a href="https://jhalderm.com/">J. Alex Halderman</a>.</div>
+  <div class="footer">Modified HTML/CSS/JS used from <a href="https://jhalderm.com/">J. Alex Halderman</a>.</div>
 
   <script type="text/javascript">
       function setText(id, t) {
