--- a/students.html
+++ b/students.html
@@ -22,12 +22,12 @@
     <div class=spacer></div>
 
     <p class="indent">
-      <p>A very warm welcome to you, <b>dear Student.</b> Thank you for your interest! By choosing to conduct scientific research, as compared to other things in life, you embark on an exiting journey of exploration and discovery. Like all pursuits that matter, it is a long, sometimes frustrating journey, but is one that is generous, humbling, and extremely rewarding.</p>
+      <p>A very warm welcome to you, <b>dear Student.</b> Thank you for your interest! By choosing to conduct scientific research, you embark on an exiting journey of exploration and discovery. Like all pursuits that matter, it is a long, sometimes frustrating journey, but is one that is generous, humbling, and extremely rewarding.</p>
 
-      <p>I have put together a bunch of useful content in this page that I found valuable when I was working towards my degrees. I would skim through this content <em>before</em> exploring current research, mentorship, and collaboration opportunities, which are equally important to me. Enjoy!</p>
+      <p>I have put together a bunch of <a href="http://radical.ece.ubc.ca/notes-for-students/">useful content</a> on this page that I found valuable when I was working on my PhD. I would skim through this content <em>before</em> exploring current mentorship and internship opportunities, which are equally important to me. Enjoy!</p>
 
-      <div class="title">Life as a Graduate Student</div>
-      <p><em>What I wish I knew when I started graduate school!</em></p>
+      <div class="title">Life as a graduate student</div>
+      <p><em>"What I wish I knew when I started graduate school."</em></p>
       <ul>
         <li>
           <a href="http://www.cs.unc.edu/~azuma/hitch4.html">So Long, and Thanks for the Ph.D!</a> (Ronald Azuma).
@@ -40,7 +40,7 @@
         </li>
       </ul>
 
-      <div class="title">Reading Papers</div>
+      <div class="title">Reading papers</div>
       <p><em>The woods are lovely, dark, and deep...</em></p>
       <ul>
         <li>
@@ -48,7 +48,7 @@
         </li>
       </ul>
 
-      <div class="title">Writing and Presenting</div>
+      <div class="title">Writing and presenting</div>
       <p><em>Communication is crucial.</em></p>
       <ul>
         <li>
@@ -62,7 +62,7 @@
         </li>
       </ul>
 
-      <div class="title">Community Work</div>
+      <div class="title">The research community</div>
       <p><em>Peer review is important.</em></p>
       <ul>
         <li>
@@ -73,8 +73,8 @@
         </li>
       </ul>
 
-      <div class="title">Let's Work Together!</div>
-      <p><em>Alone we can do so little; together we can do so much.</em></p>
+      <div class="title">Let's work together!</div>
+      <p><em>"Alone we can do so little; together we can do so much." (Helen Keller)</em></p>
       <ul>
         <li>
           <b>Mentorships:</b> Are you a student looking for a mentor for your research? Just <a href="index.html">email</a> me.
