--- a/students.html
+++ b/students.html
@@ -27,7 +27,7 @@
       <p>I have put together a bunch of <a href="http://radical.ece.ubc.ca/notes-for-students/">useful content</a> on this page that I found valuable when I was working on my PhD. I would skim through this content <em>before</em> exploring current mentorship and internship opportunities, which are equally important to me. Enjoy!</p>
 
       <div class="title">Life as a graduate student</div>
-      <p><em>"What I wish I knew when I started graduate school."</em></p>
+      <p><em>What I wish I knew when I started graduate school!</em></p>
       <ul>
         <li>
           <a href="http://www.cs.unc.edu/~azuma/hitch4.html">So Long, and Thanks for the Ph.D!</a> (Ronald Azuma).
@@ -74,7 +74,7 @@
       </ul>
 
       <div class="title">Let's work together!</div>
-      <p><em>"Alone we can do so little; together we can do so much." (Helen Keller)</em></p>
+      <p><em>Never underestimate the power of collaboration.</em></p>
       <ul>
         <li>
           <b>Mentorships:</b> Are you a student looking for a mentor for your research? Just <a href="index.html">email</a> me.
