--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </table>
 
   <div class="students">
-    <span class="announcement info">If you are a student and interested in working with me, please click <a href="students.html">here!</a></span>
+    <span class="announcement info">If you are a <b>student</b> and interested in working with me, please click <a href="students.html">here!</a></span>
   </div>
 
   </td><td class="column" id="right">
