--- a/students.html
+++ b/students.html
@@ -66,10 +66,10 @@
       <p><em>Peer review is important.</em></p>
       <ul>
         <li>
-          <a href="http://www.cs.uiuc.edu/homes/caesar/classes/CS598.F08/readings/reviewing.html">The task of the referee</a> (Alan Jay Smith).
+          <a href="http://www.cs.utexas.edu/users/mckinley/notes/reviewing-smith.pdf">The task of the referee</a> (Alan Jay Smith).
         </li>
         <li>
-          <a href="http://www.ece.vt.edu/thou/reviewing.html">How to review papers</a> (Maja Mataric).
+          <a href="https://homes.cs.washington.edu/~mernst/advice/meier-paper.review.html">How to review papers</a> (Alan Meier).
         </li>
       </ul>
 
