--- a/students.html
+++ b/students.html
@@ -24,19 +24,19 @@
     <p class="indent">
       <p>A very warm welcome to you, <b>dear Student.</b> Thank you for your interest! By choosing to conduct scientific research, you embark on an exiting journey of exploration and discovery. Like all pursuits that matter, it is a long, sometimes frustrating journey, but is one that is generous, humbling, and extremely rewarding.</p>
 
-      <p>I have put together a bunch of <a href="http://radical.ece.ubc.ca/notes-for-students/">useful content</a> on this page that I found valuable when I was working on my PhD. I would skim through this content <em>before</em> exploring current mentorship and internship opportunities, which are equally important to me. Enjoy!</p>
+      <p>I have put together a bunch of <a href="http://radical.ece.ubc.ca/notes-for-students/" target="_blank">useful content</a> on this page that I found valuable when I was working on my PhD. I would skim through this content <em>before</em> exploring current mentorship and internship opportunities, which are equally important to me. Enjoy!</p>
 
       <div class="title">Life as a graduate student</div>
       <p><em>What I wish I knew when I started graduate school!</em></p>
       <ul>
         <li>
-          <a href="http://www.cs.unc.edu/~azuma/hitch4.html">So Long, and Thanks for the Ph.D!</a> (Ronald Azuma).
+          <a href="http://www.cs.unc.edu/~azuma/hitch4.html" target="_blank">So Long, and Thanks for the Ph.D!</a> (Ronald Azuma).
         </li>
         <li>
-          <a href="http://www.cs.indiana.edu/how.2b/how.2b.html">How to Be a Good Graduate Student/Advisor</a> (Marie desJardins).
+          <a href="http://www.cs.indiana.edu/how.2b/how.2b.html" target="_blank">How to Be a Good Graduate Student/Advisor</a> (Marie desJardins).
         </li>
         <li>
-          <a href="http://michaelnielsen.org/blog/principles-of-effective-research/">Principles of Effective Research</a> (Michael Nielsen).
+          <a href="http://michaelnielsen.org/blog/principles-of-effective-research/" target="_blank">Principles of Effective Research</a> (Michael Nielsen).
         </li>
       </ul>
 
@@ -44,7 +44,7 @@
       <p><em>The woods are lovely, dark, and deep...</em></p>
       <ul>
         <li>
-          <a href="http://www.cs.columbia.edu/~hgs/netbib/efficientReading.pdf">Efficient Reading of Papers in Science and Technology</a> (Michael J. Hanson; updated by Dylan J. McNamee.)
+          <a href="http://www.cs.columbia.edu/~hgs/netbib/efficientReading.pdf" target="_blank">Efficient Reading of Papers in Science and Technology</a> (Michael J. Hanson; updated by Dylan J. McNamee.)
         </li>
       </ul>
 
@@ -55,10 +55,10 @@
           Do you know the difference between a thesis and a dissertation? Olin Shivers describes the process of <a href="http://www.ccs.neu.edu/home/shivers/diss-advice.html">writing a dissertation.</a>
         </li>
         <li>
-          A <a href="http://www-2.cs.cmu.edu/afs/cs.cmu.edu/user/mleone/web/how-to.html">collection of advice on research and writing</a> maintained by Mark Leone.
+          A <a href="http://www-2.cs.cmu.edu/afs/cs.cmu.edu/user/mleone/web/how-to.html" target="_blank">collection of advice on research and writing</a> maintained by Mark Leone.
         </li>
         <li>
-          Mark Hill’s advice for <a href="http://www.cs.wisc.edu/~markhill/conference-talk.html">oral presentations.</a>
+          Mark Hill’s advice for <a href="http://www.cs.wisc.edu/~markhill/conference-talk.html" target="_blank">oral presentations.</a>
         </li>
       </ul>
 
@@ -66,10 +66,10 @@
       <p><em>Peer review is important.</em></p>
       <ul>
         <li>
-          <a href="http://www.cs.utexas.edu/users/mckinley/notes/reviewing-smith.pdf">The task of the referee</a> (Alan Jay Smith).
+          <a href="http://www.cs.utexas.edu/users/mckinley/notes/reviewing-smith.pdf" target="_blank">The task of the referee</a> (Alan Jay Smith).
         </li>
         <li>
-          <a href="https://homes.cs.washington.edu/~mernst/advice/meier-paper.review.html">How to review papers</a> (Alan Meier).
+          <a href="https://homes.cs.washington.edu/~mernst/advice/meier-paper.review.html" target="_blank">How to review papers</a> (Alan Meier).
         </li>
       </ul>
 
@@ -80,7 +80,7 @@
           <b>Mentorships:</b> Are you a student looking for a mentor for your research? Just <a href="index.html">email</a> me.
         </li>
         <li>
-          <b>Internships:</b> Are you a student interested in joining QCRI as a research intern? Apple <a href="http://www.qcri.qa/join-us/apply-now/apply-now">here.</a>
+          <b>Internships:</b> Are you a student interested in joining QCRI as a research intern? Apple <a href="http://www.qcri.qa/join-us/apply-now/apply-now" target="_blank">here.</a>
         </li>
       </ul>
 
