--- a/students.html
+++ b/students.html
@@ -77,10 +77,10 @@
       <p><em>Never underestimate the power of collaboration.</em></p>
       <ul>
         <li>
-          <b>Mentorships:</b> Are you a student looking for a mentor for your research? Just <a href="index.html">email</a> me.
+          <b>Mentorships:</b> Are you looking for a mentor to advice you on your research? Just <a href="index.html">email</a> me.
         </li>
         <li>
-          <b>Internships:</b> Are you a student interested in joining QCRI as a research intern? Apple <a href="http://www.qcri.qa/join-us/apply-now/apply-now" target="_blank">here.</a>
+          <b>Internships:</b> Are you interested in joining QCRI as a research intern? Apple <a href="http://www.qcri.qa/join-us/apply-now/apply-now" target="_blank">here.</a>
         </li>
       </ul>
 
