--- a/students.html
+++ b/students.html
@@ -22,9 +22,9 @@
     <div class=spacer></div>
 
     <p class="indent">
-      <p>A very warm welcome to you, <b>dear Student.</b> Thank you for your interest! By choosing to conduct scientific research, you embark on an exiting journey of exploration and discovery. Like all pursuits that matter, it is a long, sometimes frustrating journey, but is one that is generous, humbling, and extremely rewarding.</p>
+      <p>A very warm welcome to you, <b>dear Student.</b> Thank you for your interest! By choosing to conduct scientific research, you embark on an exiting journey of exploration and discovery. Like all pursuits that matter, it is a long, sometimes frustrating, journey, but one that is generous, humbling, and extremely rewarding.</p>
 
-      <p>I have put together a bunch of <a href="http://radical.ece.ubc.ca/notes-for-students/" target="_blank">useful content</a> on this page that I found valuable when I was working on my PhD. I would skim through this content <em>before</em> exploring current mentorship and internship opportunities, which are equally important to me. Enjoy!</p>
+      <p>I have put together a bunch of <a href="http://radical.ece.ubc.ca/notes-for-students/" target="_blank">useful content</a> on this page. I would skim through the links below <em>before</em> exploring mentorship and internship opportunities, which are equally important. Enjoy!</p>
 
       <div class="title">Life as a graduate student</div>
       <p><em>What I wish I knew when I started graduate school!</em></p>
@@ -77,10 +77,10 @@
       <p><em>Never underestimate the power of collaboration.</em></p>
       <ul>
         <li>
-          <b>Mentorships:</b> Are you looking for a mentor to advice you on your research? Just <a href="index.html">email</a> me.
+          <b>Mentorships:</b> Please <a href="index.html">email</a> me if you are looking for a mentor to advice you on your research.
         </li>
         <li>
-          <b>Internships:</b> Are you interested in joining QCRI as a research intern? Apple <a href="http://www.qcri.qa/join-us/apply-now/apply-now" target="_blank">here.</a>
+          <b>Internships:</b> Apply <a href="http://www.qcri.qa/join-us/apply-now/apply-now" target="_blank">here if you are interested in joining QCRI as a research intern.</a>
         </li>
       </ul>
 
