--- a/students.html
+++ b/students.html
@@ -80,7 +80,7 @@
           <b>Mentorships:</b> Please <a href="index.html">email</a> me if you are looking for a mentor to advice you on your research.
         </li>
         <li>
-          <b>Internships:</b> Apply <a href="http://www.qcri.qa/join-us/apply-now/apply-now" target="_blank">here if you are interested in joining QCRI as a research intern.</a>
+          <b>Internships:</b> Apply <a href="http://www.qcri.qa/join-us/apply-now/apply-now" target="_blank">here</a> if you are interested in joining QCRI as a research intern.</a>
         </li>
       </ul>
 
