--- a/students.html
+++ b/students.html
@@ -73,7 +73,7 @@
         </li>
       </ul>
 
-      <div class="title">Hey, let's work together</div>
+      <div class="title">Working together</div>
       <p><em>Never underestimate the power of collaboration.</em></p>
       <ul>
         <li>
