Adds a new project

--- a/index.html
+++ b/index.html
@@ -90,8 +90,13 @@
   </h2>
 
   <p>
+    <div class="underlined">Anti-Adversarial Truth Discovery</div>
+    I'm collaborating with QCRI's <a href="http://dajoomla.herokuapp.com">Data Analytics</a> folks to design a new truth discovery algorithm that is robust against various falsification attacks.
+  </p>
+
+  <p>
     <div class="underlined">Cyber Security Intelligence</div>
-    I'm collaborating with <a href="http://qcri.com/">QCRI</a> CyberSec folks to build a real-time processing platform for analyzing DRDoS attacks.
+    I'm working with QCRI's <a href="http://qcri.org.qa/our-research/cyber-security/cyber-security">Cyber Security</a> folks to build a real-time processing platform for analyzing DRDoS attacks.
   </p>
 
   <p>
