--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <p>
     <div class="underlined">Cyber Security Intelligence</div>
-    I'm working with QCRI's <a href="http://qcri.org.qa/our-research/cyber-security/cyber-security">Cyber Security</a> folks to build a real-time processing platform for analyzing DRDoS attacks.
+    I'm collaborating with QCRI's <a href="http://qcri.org.qa/our-research/cyber-security/cyber-security">Cyber Security</a> folks to build a real-time processing platform for analyzing DRDoS attacks.
   </p>
 
   <p>
