--- a/students.html
+++ b/students.html
@@ -44,7 +44,7 @@
       <p><em>The woods are lovely, dark, and deep...</em></p>
       <ul>
         <li>
-          <a href="http://www.cs.columbia.edu/~hgs/netbib/efficientReading.pdf" target="_blank">Efficient Reading of Papers in Science and Technology</a> (Michael J. Hanson; updated by Dylan J. McNamee.)
+          <a href="http://www.cs.columbia.edu/~hgs/netbib/efficientReading.pdf" target="_blank">Efficient Reading of Papers in Science and Technology</a> (Michael J. Hanson; updated by Dylan J. McNamee).
         </li>
       </ul>
 
@@ -63,7 +63,7 @@
       </ul>
 
       <div class="title">The research community</div>
-      <p><em>Peer review is important.</em></p>
+      <p><em>Peer review is a duty.</em></p>
       <ul>
         <li>
           <a href="http://www.cs.utexas.edu/users/mckinley/notes/reviewing-smith.pdf" target="_blank">The task of the referee</a> (Alan Jay Smith).
