Adds HBKU CLPP event

--- a/news.html
+++ b/news.html
@@ -23,6 +23,11 @@
     <div class=spacer></div>
 
     <p class="indent">
+      <div class="date">Feb, 2017</div>
+      I'm speaking as a panelist at the <a href="http://www.hbku.edu.qa/en/academic-events/fifth-law-and-public-policy-colloquium">5th KBKU CLPP</a><br>
+    </p>
+
+    <p class="indent">
       <div class="date">Jan, 2017</div>
       I'm serving on the judging committee of <a href="http://www.qnrf.org/en-us/Funding/Special-Programs/National-Science-Research-Competition">NSRC 2017</a><br>
     </p>
