--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   <p class="indent">
     <div class="underlined">Feb, 2017</div>
-    I'm speaking as a panelist at the <a href="http://www.hbku.edu.qa/en/academic-events/fifth-law-and-public-policy-colloquium">5th KBKU CLPP</a><br>
+    I'm speaking as a panelist at the <a href="http://www.hbku.edu.qa/en/academic-events/fifth-law-and-public-policy-colloquium">5th HBKU CLPP</a><br>
   </p>
 
   <p class="indent">
