--- a/students.html
+++ b/students.html
@@ -22,7 +22,7 @@
     <div class=spacer></div>
 
     <p class="indent">
-      <p>A very warm welcome to you, <b>dear Student.</b> Thank you for your interest! By choosing to conduct scientific research, you embark on an exiting journey of exploration and discovery. Like all pursuits that matter, it is a long, sometimes frustrating, journey, but one that is generous, humbling, and extremely rewarding.</p>
+      <p>A very warm welcome to you, <b>dear Student.</b> Thank you for your interest! By choosing to conduct scientific research, you embark on an exciting journey of exploration and discovery. Like all pursuits that matter, it is a long, sometimes frustrating, journey, but one that is generous, humbling, and extremely rewarding.</p>
 
       <p>I have put together a bunch of <a href="http://radical.ece.ubc.ca/notes-for-students/" target="_blank">useful content</a> on this page. I would skim through the links below <em>before</em> exploring mentorship and internship opportunities, which are equally important. Enjoy!</p>
 
