--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <p>My research is centered around the security and privacy of social and information networks, with an emphasis on problems that broadly impact the way people use technology and the Internet.</p>
 
-  <p>I received my PhD in Electrical and Computer Engineering from the <a href="http://www.ece.ubc.ca/">University of British Columbia (UBC)</a>, under the mentorship of <a href="http://www.ece.ubc.ca/~beznosov/">Konstantin Beznosov</a> and <a href="http://www.ece.ubc.ca/~matei/">Matei Ripeanu</a>. My thesis presented one of the first <a href="https://dx.doi.org/10.14288/1.0167277">security analyses of malicious socialbots on the web.</a></p>
+    <p>I received my PhD in <a href="http://www.ece.ubc.ca/">Electrical and Computer Engineering</a> from the University of British Columbia (UBC) under the mentorship of <a href="http://www.ece.ubc.ca/~beznosov/">Konstantin Beznosov</a> and <a href="http://www.ece.ubc.ca/~matei/">Matei Ripeanu</a>. My <a href="https://dx.doi.org/10.14288/1.0167277">thesis</a> presented one of the first security analyses of malicious socialbots on the web.</p>
 
   <h2>
     Current projects
