--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
+  
+  <p class="indent">
+    <div class="underlined">May, 2017</div>
+    I'm attending <a href="http://ifipsec.org/2017">IFIP SEC 2017</a>. See you in Rome!<br>
+  </p>
 
   <p class="indent">
     <div class="underlined">Feb, 2017</div>
