--- a/news.html
+++ b/news.html
@@ -21,6 +21,11 @@
     <h1>News</h1>
     <h2><a href="index.html">&laquo;&nbsp;Yazan Boshmaf</a></h2>
     <div class=spacer></div>
+    
+    <p class="indent">
+      <div class="date">May, 2017</div>
+      I'm attending <a href="http://ifipsec.org/2017">IFIP SEC 2017</a>. See you in Rome!<br>
+    </p>
 
     <p class="indent">
       <div class="date">Feb, 2017</div>
