--- a/news.html
+++ b/news.html
@@ -23,18 +23,23 @@
     <div class=spacer></div>
     
     <p class="indent">
+      <div class="date">June, 2017</div>
+      I'm serving on on the program committee of <a href="http://cns2017.ieee-cns.org/workshop/3rd-workshop-security-and-privacy-cloud-spc">IEEE SPC 2017</a>
+    </p>
+    
+    <p class="indent">
       <div class="date">May, 2017</div>
-      I'm attending <a href="http://ifipsec.org/2017">IFIP SEC 2017</a>. See you in Rome!<br>
+      I'm attending <a href="http://ifipsec.org/2017">IFIP SEC 2017</a>. See you in Rome!
     </p>
 
     <p class="indent">
       <div class="date">Feb, 2017</div>
-      I'm speaking as a panelist at the <a href="http://www.hbku.edu.qa/en/academic-events/fifth-law-and-public-policy-colloquium">5th HBKU CLPP</a><br>
+      I'm speaking as a panelist at the <a href="http://www.hbku.edu.qa/en/academic-events/fifth-law-and-public-policy-colloquium">5th HBKU CLPP</a>
     </p>
 
     <p class="indent">
       <div class="date">Jan, 2017</div>
-      I'm serving on the judging committee of <a href="http://www.qnrf.org/en-us/Funding/Special-Programs/National-Science-Research-Competition">NSRC 2017</a><br>
+      I'm serving on the judging committee of <a href="http://www.qnrf.org/en-us/Funding/Special-Programs/National-Science-Research-Competition">NSRC 2017</a>
     </p>
 
     <p class="indent">
