--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
     
     <p class="indent">
       <div class="date">June, 2017</div>
-      I'm serving on on the program committee of <a href="http://cns2017.ieee-cns.org/workshop/3rd-workshop-security-and-privacy-cloud-spc">IEEE SPC 2017</a>
+      I'm serving on the program committee of <a href="http://cns2017.ieee-cns.org/workshop/3rd-workshop-security-and-privacy-cloud-spc">IEEE SPC 2017</a>
     </p>
     
     <p class="indent">
