--- a/pubs.html
+++ b/pubs.html
@@ -30,7 +30,7 @@
     </p>
 
     <p>
-      <div class="title"><span><a class=title href="http://www.sciencedirect.com/science/article/pii/S1574119216300888">Decoupling Data-at-Rest Encryption and Smartphone Locking with Wearable Devices</a></span></div>
+      <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/319/files/muslukhov2016.pdf">Decoupling Data-at-Rest Encryption and Smartphone Locking with Wearable Devices</a></span></div>
       <small>
       Ildar Muslukhov, San-Tsai Sun, Primal Wijesekera, Yazan Boshmaf, and Konstantin Beznosov
     <div class=ref><i>Elsevier Pervasive and Mobile Computing</i><br>
