--- a/index.html
+++ b/index.html
@@ -108,9 +108,14 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
+  
+  <p class="indent">
+    <div class="underlined">Sep, 2017</div>
+    I'm giving a guest lecture at HBKU ICT Graduate Seminar in Cyber Security
+  </p>
     
   <p class="indent">
-    <div class="underlined">June, 2017</div>
+    <div class="underlined">Jun, 2017</div>
     I'm serving on the program committee of <a href="http://cns2017.ieee-cns.org/workshop/3rd-workshop-security-and-privacy-cloud-spc">IEEE SPC 2017</a>
   </p>
   
