--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   
   <p class="indent">
     <div class="underlined">Sep, 2017</div>
-    I'm giving a guest lecture at HBKU ICT Cyber Security Graduate Seminar
+    I'm giving a guest lecture at HBKU ICT Graduate Seminar
   </p>
     
   <p class="indent">
