--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
     
     <p class="indent">
       <div class="date">Sep, 2017</div>
-      I'm giving a guest lecture at HBKU ICT Graduate Seminar in Cyber Security
+      I'm giving a guest lecture at HBKU ICT Graduate Seminar
     </p>
     
     <p class="indent">
