--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
   </h2>
   
   <p class="indent">
+    <div class="underlined">Nov, 2017</div>
+    I'm speaking at the 3rd CEOs and Leaders Roundtable on Finance, Fintech, and Crypto Currencies
+  </p>
+    
+  <p class="indent">
     <div class="underlined">Sep, 2017</div>
     I'm giving a guest lecture at HBKU ICT Graduate Seminar
   </p>
