--- a/news.html
+++ b/news.html
@@ -23,6 +23,11 @@
     <div class=spacer></div>
     
     <p class="indent">
+      <div class="date">Nov, 2017</div>
+      I'm speaking at the 3rd CEOs Roundtable on Fintech and Crypto Currencies
+    </p>
+    
+    <p class="indent">
       <div class="date">Sep, 2017</div>
       I'm giving a guest lecture at HBKU ICT Graduate Seminar
     </p>
