--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   
   <p class="indent">
     <div class="underlined">Nov, 2017</div>
-    I'm speaking at the 3rd CEOs Roundtable on Fintech and Crypto Currencies
+    I'm speaking at the 3rd HBKU Roundtable on FinTech
   </p>
     
   <p class="indent">
