--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
     
     <p class="indent">
       <div class="date">Nov, 2017</div>
-      I'm speaking at the 3rd CEOs Roundtable on Fintech and Crypto Currencies
+      I'm speaking at the 3rd HBKU Roundtable on FinTech
     </p>
     
     <p class="indent">
