--- a/news.html
+++ b/news.html
@@ -23,6 +23,12 @@
     <div class=spacer></div>
     
     <p class="indent">
+      <div class="date">Jan, 2017</div>
+      Our work on Tor/Bitcoin privacy has been <a href="https://www.wired.com/story/bitcoin-drug-deals-silk-road-blockchain/">covered</a> by WIRED</br>
+      I'm speaking at <a href="http://www.katara.net/en/whats-on/events/Lectures/Katara%20Tech%20Forum/2256">the 6th Katara Tech Forum</a>
+    </p>
+  
+    <p class="indent">
       <div class="date">Nov, 2017</div>
       I'm speaking at the 3rd HBKU Roundtable on FinTech
     </p>
