--- a/index.html
+++ b/index.html
@@ -108,35 +108,11 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
-  
-  <p class="indent">
-    <div class="underlined">Nov, 2017</div>
-    I'm speaking at the 3rd HBKU Roundtable on FinTech
-  </p>
     
   <p class="indent">
-    <div class="underlined">Sep, 2017</div>
-    I'm giving a guest lecture at HBKU ICT Graduate Seminar
-  </p>
-    
-  <p class="indent">
-    <div class="underlined">Jun, 2017</div>
-    I'm serving on the program committee of <a href="http://cns2017.ieee-cns.org/workshop/3rd-workshop-security-and-privacy-cloud-spc">IEEE SPC 2017</a>
-  </p>
-  
-  <p class="indent">
-    <div class="underlined">May, 2017</div>
-    I'm attending <a href="http://ifipsec.org/2017">IFIP SEC 2017</a>. See you in Rome!
-  </p>
-
-  <p class="indent">
-    <div class="underlined">Feb, 2017</div>
-    I'm speaking as a panelist at the <a href="http://www.hbku.edu.qa/en/academic-events/fifth-law-and-public-policy-colloquium">5th HBKU CLPP</a>
-  </p>
-
-  <p class="indent">
-    <div class="underlined">Jan, 2017</div>
-    I'm serving on the judging committee of <a href="http://www.qnrf.org/en-us/Funding/Special-Programs/National-Science-Research-Competition">NSRC 2017</a>
+    <div class="underlined">Jan, 2018</div>
+    Our work on Tor/Bitcoin privacy has been <a href="https://www.wired.com/story/bitcoin-drug-deals-silk-road-blockchain/">covered</a> by WIRED</br>
+    I'm speaking at <a href="http://www.katara.net/en/whats-on/events/Lectures/Katara%20Tech%20Forum/2256">the 6th Katara Tech Forum</a>
   </p>
 
   <h2>
